qt/gen_qcolumnview.h

class QAbstractItemModel;
class QColumnView;
class QItemSelectionModel;
class QMetaObject;
class QModelIndex;
class QPoint;
class QRect;
class QSize;
class QWidget;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QColumnView QColumnView;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWidget QWidget;
bool QColumnView_override_virtual_leaveEvent(void* self, intptr_t slot);
bool QColumnView_override_virtual_moveEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QColumnView_override_virtual_closeEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QColumnView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QColumnView_override_virtual_actionEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QColumnView_override_virtual_showEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QColumnView_override_virtual_hideEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QColumnView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QColumnView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QColumnView_override_virtual_metric(void* self, intptr_t slot);
int QColumnView_virtualbase_metric(const void* self, int param1);
bool QColumnView_override_virtual_initPainter(void* self, intptr_t slot);
void QColumnView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QColumnView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QColumnView_virtualbase_redirected(const void* self, QPoint* offset);
bool QColumnView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QColumnView_virtualbase_sharedPainter(const void* self);
bool QColumnView_override_virtual_childEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QColumnView_override_virtual_customEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_customEvent(void* self, QEvent* event);
bool QColumnView_override_virtual_connectNotify(void* self, intptr_t slot);
void QColumnView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QColumnView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QColumnView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QColumnView_staticMetaObject();
void QColumnView_delete(QColumnView* self);