qt/gen_qcolumnview.nim

proc fcQColumnView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_leaveEvent".}
proc fQColumnView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_moveEvent".}
proc fcQColumnView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_moveEvent".}
proc fQColumnView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_closeEvent".}
proc fcQColumnView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_closeEvent".}
proc fQColumnView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_tabletEvent".}
proc fcQColumnView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_tabletEvent".}
proc fQColumnView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_actionEvent".}
proc fcQColumnView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_actionEvent".}
proc fQColumnView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_showEvent".}
proc fcQColumnView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_showEvent".}
proc fQColumnView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_hideEvent".}
proc fcQColumnView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_hideEvent".}
proc fQColumnView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QColumnView_virtualbase_nativeEvent".}
proc fcQColumnView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_nativeEvent".}
proc fQColumnView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QColumnView_virtualbase_metric".}
proc fcQColumnView_override_virtual_metric(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_metric".}
proc fQColumnView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QColumnView_virtualbase_initPainter".}
proc fcQColumnView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_initPainter".}
proc fQColumnView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QColumnView_virtualbase_redirected".}
proc fcQColumnView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_redirected".}
proc fQColumnView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QColumnView_virtualbase_sharedPainter".}
proc fcQColumnView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_sharedPainter".}
proc fQColumnView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_childEvent".}
proc fcQColumnView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_childEvent".}
proc fQColumnView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_customEvent".}
proc fcQColumnView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_customEvent".}
proc fQColumnView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QColumnView_virtualbase_connectNotify".}
proc fcQColumnView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_connectNotify".}
proc fQColumnView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QColumnView_virtualbase_disconnectNotify".}
proc fcQColumnView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_disconnectNotify".}
proc fcQColumnView_staticMetaObject(): pointer {.importc: "QColumnView_staticMetaObject".}
proc fcQColumnView_delete(self: pointer) {.importc: "QColumnView_delete".}


func init*(T: type QColumnView, h: ptr cQColumnView): QColumnView =
  T(h: h)
proc create*(T: type QColumnView, parent: gen_qwidget.QWidget): QColumnView =

  QColumnView.init(fcQColumnView_new(parent.h))
proc create*(T: type QColumnView, ): QColumnView =

  QColumnView.init(fcQColumnView_new2())
proc metaObject*(self: QColumnView, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQColumnView_metaObject(self.h))

proc metacast*(self: QColumnView, param1: cstring): pointer =

  fcQColumnView_metacast(self.h, param1)

proc metacall*(self: QColumnView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQColumnView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QColumnView, s: cstring): string =

  let v_ms = fcQColumnView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QColumnView, s: cstring): string =

  let v_ms = fcQColumnView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc updatePreviewWidget*(self: QColumnView, index: gen_qabstractitemmodel.QModelIndex): void =

  fcQColumnView_updatePreviewWidget(self.h, index.h)

proc miqt_exec_callback_QColumnView_updatePreviewWidget(slot: int, index: pointer) {.exportc.} =
  type Cb = proc(index: gen_qabstractitemmodel.QModelIndex)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = gen_qabstractitemmodel.QModelIndex(h: index)


  nimfunc[](slotval1)

proc onupdatePreviewWidget*(self: QColumnView, slot: proc(index: gen_qabstractitemmodel.QModelIndex)) =
  type Cb = proc(index: gen_qabstractitemmodel.QModelIndex)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQColumnView_connect_updatePreviewWidget(self.h, cast[int](addr tmp[]))
proc indexAt*(self: QColumnView, point: gen_qpoint.QPoint): gen_qabstractitemmodel.QModelIndex =

  gen_qabstractitemmodel.QModelIndex(h: fcQColumnView_indexAt(self.h, point.h))

proc scrollTo*(self: QColumnView, index: gen_qabstractitemmodel.QModelIndex, hint: gen_qabstractitemview.QAbstractItemViewScrollHint): void =

  fcQColumnView_scrollTo(self.h, index.h, cint(hint))

proc sizeHint*(self: QColumnView, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQColumnView_sizeHint(self.h))

proc visualRect*(self: QColumnView, index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQColumnView_visualRect(self.h, index.h))

proc setModel*(self: QColumnView, model: gen_qabstractitemmodel.QAbstractItemModel): void =

  fcQColumnView_setModel(self.h, model.h)

proc setSelectionModel*(self: QColumnView, selectionModel: gen_qitemselectionmodel.QItemSelectionModel): void =

  fcQColumnView_setSelectionModel(self.h, selectionModel.h)

proc setRootIndex*(self: QColumnView, index: gen_qabstractitemmodel.QModelIndex): void =

  fcQColumnView_setRootIndex(self.h, index.h)

proc selectAll*(self: QColumnView, ): void =

  fcQColumnView_selectAll(self.h)

proc setResizeGripsVisible*(self: QColumnView, visible: bool): void =

  fcQColumnView_setResizeGripsVisible(self.h, visible)

proc resizeGripsVisible*(self: QColumnView, ): bool =

  fcQColumnView_resizeGripsVisible(self.h)

proc previewWidget*(self: QColumnView, ): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQColumnView_previewWidget(self.h))

proc setPreviewWidget*(self: QColumnView, widget: gen_qwidget.QWidget): void =

  fcQColumnView_setPreviewWidget(self.h, widget.h)

proc setColumnWidths*(self: QColumnView, list: seq[cint]): void =

  var list_CArray = newSeq[cint](len(list))
  for i in 0..<len(list):
    list_CArray[i] = list[i]

  fcQColumnView_setColumnWidths(self.h, struct_miqt_array(len: csize_t(len(list)), data: if len(list) == 0: nil else: addr(list_CArray[0])))

proc columnWidths*(self: QColumnView, ): seq[cint] =

  var v_ma = fcQColumnView_columnWidths(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc tr2*(_: type QColumnView, s: cstring, c: cstring): string =

  let v_ms = fcQColumnView_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QColumnView, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQColumnView_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QColumnView, s: cstring, c: cstring): string =

  let v_ms = fcQColumnView_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QColumnView, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQColumnView_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metaObject(self: QColumnView, ): gen_qobjectdefs.QMetaObject =


  gen_qobjectdefs.QMetaObject(h: fQColumnView_virtualbase_metaObject(self.h))

type QColumnViewmetaObjectBase* = proc(): gen_qobjectdefs.QMetaObject
proc onmetaObject*(self: QColumnView, slot: proc(super: QColumnViewmetaObjectBase): gen_qobjectdefs.QMetaObject) =
  # TODO check subclass
  type Cb = proc(super: QColumnViewmetaObjectBase): gen_qobjectdefs.QMetaObject
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQColumnView_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QColumnView_metaObject(self: ptr cQColumnView, slot: int): pointer {.exportc: "miqt_exec_callback_QColumnView_metaObject ".} =
  type Cb = proc(super: QColumnViewmetaObjectBase): gen_qobjectdefs.QMetaObject
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(): auto =
    callVirtualBase_metaObject(QColumnView(h: self), )

  let virtualReturn = nimfunc[](superCall )

  virtualReturn.h
proc callVirtualBase_metacast(self: QColumnView, param1: cstring): pointer =


  fQColumnView_virtualbase_metacast(self.h, param1)

type QColumnViewmetacastBase* = proc(param1: cstring): pointer
proc onmetacast*(self: QColumnView, slot: proc(super: QColumnViewmetacastBase, param1: cstring): pointer) =
  # TODO check subclass
  type Cb = proc(super: QColumnViewmetacastBase, param1: cstring): pointer
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQColumnView_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QColumnView_metacast(self: ptr cQColumnView, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QColumnView_metacast ".} =
  type Cb = proc(super: QColumnViewmetacastBase, param1: cstring): pointer
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: cstring): auto =
    callVirtualBase_metacast(QColumnView(h: self), param1)
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](superCall, slotval1 )

  virtualReturn
proc callVirtualBase_metacall(self: QColumnView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQColumnView_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QColumnViewmetacallBase* = proc(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
proc onmetacall*(self: QColumnView, slot: proc(super: QColumnViewmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint) =
  # TODO check subclass
  type Cb = proc(super: QColumnViewmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQColumnView_override_virtual_metacall(self.h, cast[int](addr tmp[]))
